--- a/package.json
+++ b/package.json
@@ -1,1 +1,17 @@
-{"type":"module","dependencies":{"cors":"^2.8.5","express":"^4.18.2","sqlite":"^4.2.1","sqlite3":"^5.1.7"}}
+{
+  "name": "tinylink",
+  "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": "18.x"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "sqlite": "^4.2.1",
+    "sqlite3": "^5.1.7"
+  }
+}
